# codegraph-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
.agents/: AGENTS.md  mcp_config.json
.github/workflows/: aur-git.yml  ci.yml  release.yml  rustfmt.yml
__tests__/: sqlite-backend.test.ts
archive/: .gitignore
crates/codegraph/: Cargo.toml
crates/codegraph-api/: Cargo.toml
crates/codegraph-api/src/: lib.rs
crates/codegraph-api/tests/: api.rs
crates/codegraph-context/: Cargo.toml
crates/codegraph-context/src/: lib.rs
crates/codegraph-core/: Cargo.toml
crates/codegraph-core/src/: error.rs  kinds.rs  lib.rs  model.rs
crates/codegraph-db/: Cargo.toml
crates/codegraph-db/src/: lib.rs  migrations.rs  model.rs  queries.rs  schema.sql
crates/codegraph-db/tests/: smoke.rs
crates/codegraph-extract/: Cargo.toml
crates/codegraph-extract/src/: config.rs  languages.rs  lib.rs  orchestrator.rs  walker.rs
crates/codegraph-extract/src/languages/: c.rs  common.rs  cpp.rs  csharp.rs  go.rs  java.rs  javascript.rs  lua.rs  php.rs  python.rs  ruby.rs  rust.rs  scala.rs  swift.rs  typescript.rs
crates/codegraph-extract/tests/: cpp_functions.rs  extract.rs
crates/codegraph-extract/tests/fixtures/: issue9_attr_specifiers.h  sample.go  sample.java  sample.js  sample.py  sample.rb  sample.rs  sample.ts
crates/codegraph-graph/: Cargo.toml
crates/codegraph-graph/src/: lib.rs
crates/codegraph-graph/tests/: traversal.rs
crates/codegraph-installer/: Cargo.toml
crates/codegraph-installer/src/: lib.rs  targets.rs
crates/codegraph-installer/src/targets/: antigravity.rs  claude.rs  codex.rs  cursor.rs  hermes.rs  jsonutil.rs  mod.rs  opencode.rs
crates/codegraph-installer/tests/: install.rs
crates/codegraph-mcp/: Cargo.toml
crates/codegraph-mcp/src/: lib.rs  protocol.rs  server-instructions.md  tools.rs
crates/codegraph-resolve/: Cargo.toml
crates/codegraph-resolve/src/: frameworks.rs  imports.rs  lib.rs  name_match.rs
crates/codegraph-viz/: Cargo.toml
crates/codegraph-viz/assets/: app.js  index.html  styles.css
crates/codegraph-viz/src/: api.rs  assets.rs  lib.rs  server.rs
crates/codegraph-viz/tests/: http.rs
crates/codegraph/src/: bin_install.rs  main.rs  watcher.rs
docs/: PLAN.md
docs/specs/: 01-bootstrap.md  02-core-types.md  03-db-layer.md  04-extraction.md  05-resolution.md  06-graph-context.md  07-mcp-server.md  08-installer.md  09-cli-watcher.md  10-release.md
packaging/aur/: README.md
packaging/aur/codegraph-bin/: .SRCINFO  PKGBUILD
packaging/aur/codegraph-rs-bin/: .SRCINFO  PKGBUILD
packaging/aur/codegraph-rs-git/: .gitignore  PKGBUILD
scripts/: install.ps1  install.sh
src/db/: sqlite-adapter.ts
