[package]
name = "codegraph-api"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
codegraph-core    = { path = "../codegraph-core" }
codegraph-db      = { path = "../codegraph-db" }
codegraph-graph   = { path = "../codegraph-graph" }
codegraph-context = { path = "../codegraph-context" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
tempfile = "3"
camino = { workspace = true }
