[package]
name = "codegraph-context"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
codegraph-core  = { path = "../codegraph-core" }
codegraph-db    = { path = "../codegraph-db" }
codegraph-graph = { path = "../codegraph-graph" }
serde = { workspace = true }
serde_json = { workspace = true }
