[package]
name = "codegraph-db"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
codegraph-core = { path = "../codegraph-core" }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
camino = { workspace = true }
parking_lot = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3"
