[package]
name = "codegraph-graph"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
codegraph-core = { path = "../codegraph-core" }
codegraph-db   = { path = "../codegraph-db" }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = "3"
camino = { workspace = true }
